--- a/packages/victorpolisetty/customs/perplexity_request/component.yaml
+++ b/packages/victorpolisetty/customs/perplexity_request/component.yaml
@@ -7,7 +7,7 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeidlhllgpf65xwk357wukpguuaz6hxhkyh7dwplv2xkxlrlk4b7zty
-  gemini_request.py: bafybeicytmdkgdehao6obnqoff6fpugr6gpbjw4ztxcsswn5ne76vhboqi
+  perplexity_request.py: bafybeifle55snbuuv5b52hlsqv27n2sayn3xpglzuaazgavx64amgiqxfi
 fingerprint_ignore_patterns: []
 entry_point: perplexity_request.py
 callable: run
