--- a/packages/nic/customs/fundamental_analysis/component.yaml
+++ b/packages/nic/customs/fundamental_analysis/component.yaml
@@ -11,12 +11,6 @@ entry_point: fundamental_analysis.py
 callable: run
 dependencies:
   openai:
-    version: '*'
+    version: '>=1.58.1'
   requests:
-    version: '*'
-  functools:
-    version: '*'
-  typing:
-    version: '*'
-  datetime:
-    version: '*' 
+    version: '>=2.29.0'
