--- a/packages/nic/customs/fundamental_analysis/component.yaml
+++ b/packages/nic/customs/fundamental_analysis/component.yaml
@@ -2,10 +2,13 @@ name: fundamental_analysis
 author: nic
 version: 0.1.0
 type: custom
-description: A tool for analyzing the fundamentals of a single token or crypto projectusing multiple data sources and AI analysis
+description: A tool for analyzing the fundamentals of a single token or crypto projectusing
+  multiple data sources and AI analysis
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
-fingerprint: {}
+fingerprint:
+  __init__.py: bafybeick7f4g6djrx52q5qcchznrqkric4z6rbybooswzgnalhafxalh4a
+  fundamental_analysis.py: bafybeie5rckc73vhp45q25xwrovg2fsdbnzsalic7rgjsp3cnenpc6aeaq
 fingerprint_ignore_patterns: []
 entry_point: fundamental_analysis.py
 callable: run
