--- a/packages/ivan/customs/wallets_trades_history/component.yaml
+++ b/packages/ivan/customs/wallets_trades_history/component.yaml
@@ -2,10 +2,13 @@ name: wallets_trades_history
 author: ivan
 version: 0.1.0
 type: custom
-description: A tool for querying Flipside data about wallet transactions and analyzing trading history across multiple blockchains
+description: A tool for querying Flipside data about wallet transactions and analyzing
+  trading history across multiple blockchains
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
-fingerprint: {}
+fingerprint:
+  __init__.py: bafybeic4ouckodzlsu3ehpfoh776emhewdnr22x2ed4mjrmihmqblagmtm
+  wallets_trades_history.py: bafybeiekqaxdiehj2waevkaxmrjnhnptfu7wfcvw6inklx4nli53sjdaia
 fingerprint_ignore_patterns: []
 entry_point: wallets_trades_history.py
 callable: run
