--- a/packages/ivan/customs/btc_price_prediction/component.yaml
+++ b/packages/ivan/customs/btc_price_prediction/component.yaml
@@ -2,15 +2,15 @@ name: btc_price_prediction
 author: ivan
 version: 0.1.0
 type: custom
-description: A tool for generating BTC price prediction charts using price prediction
-  data from Synth. Analyzes multiple price simulations to determine the most likely
-  price trajectory and visualizes both the median prediction and individual simulation
-  paths over a 24-hour period.
+description: A tool for generating Bitcoin price predictions by combining technical
+  analysis data from TAAPI (pivot points, Fibonacci retracements) with price simulations
+  from Synth API. Uses OpenAI's GPT-4 to analyze indicators and generate detailed
+  24-hour price movement forecasts.
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeiduv4x5ar7wnuw65ilijlbax26pbloajxckdsxvc67hdzc6vo22qa
-  btc_price_prediction.py: bafybeic522xebynt3uni2bwmnvi5auybpp4auwuiu6alz5nmtq6jz7gnwi
+  btc_price_prediction.py: bafybeih5gdqoqs5epezy6pbgip2syrtds45e6rxvbq5irg6gfriqsvnzwa
 fingerprint_ignore_patterns: []
 entry_point: btc_price_prediction.py
 callable: run
