Added gridtrade agent skill

--- a/packages/jisong/customs/nft_appraisal_skill/component.yaml
+++ b/packages/jisong/customs/nft_appraisal_skill/component.yaml
@@ -7,10 +7,12 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeidee52bpvlwgklw4tzcpcz4zloexl6laanx5ylbiqfr46ymhwqm34
-  nft_appraisal_skill.py: bafybeihjc7bq6bkyenq3q365moz5th3zrhu6sw4jdogubb5ezbirnaygda
+  nft_appraisal_skill.py: bafybeiccer66wobfrooff374yjr2ukqoryunpc3wuqwy2gd4tnsgdzzxni
 fingerprint_ignore_patterns: []
 entry_point: nft_appraisal_skill.py
 callable: run
 dependencies:
   langchain-openai:
     version: '>=0.3.8'
+  requests:
+    version: '>=2.31.0'
